[package]
name = "nova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pasta_curves = "0.5.1"
nova-snark = "0.36.0"
bellpepper-core = "0.4.0"
ff = "0.13.0"
flate2 = "1.0.30"
rand = "0.8.5"
num-bigint = "0.4.5"
halo2curves = "0.6.1"
bincode = "1.3.3"

[lib]
name = "nova"
path = "src/lib.rs"

[[test]]
name = "lib-tests"
path = "src/lib.rs"